prevent about me in header from getting wrapped badly

--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,11 @@ header ul
 	text-align: center;
 }
 
+header ul a
+{
+	white-space: nowrap;
+}
+
 header li
 {
 	display: inline;
